--- a/src/route/clone/album.css
+++ b/src/route/clone/album.css
@@ -1,11 +1,11 @@
-header{
+.header-album{
     height: 65px;
     width: 100vw;
     background: #1976D2;
     color: white;
     line-height: 65px;
     font-size: 20px;
-    box-shadow: 0 2px rgb(0,0,0,0.4)
+    box-shadow: 0 0 2px rgb(0,0,0,0.4)
 }
 
 .div-head-text{
